plugins {
	id 'org.springframework.boot' version '2.3.1.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'

	// 도커 빌드 환경을 구축 툴
	id 'com.google.cloud.tools.jib' version '2.4.0'
}

group = 'com.stepup'
version = '0.0.1'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

bootJar {
	archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
//    implementation project(':eatgo-common')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}

// Docker
//jib {
//	allowInsecureRegistries = true
//
//	from {
//		image = 'metocherry/centos7-jdk8'
//	}
//
//	to {
//		image = "${project.name}:${project.version}"
//	}
//
//	container {
//		// Set JVM options.
//		jvmFlags = ['-XX:+UnlockExperimentalVMOptions', '-XX:+UseCGroupMemoryLimitForHeap', '-Dserver.port=8080']
//		// Expose different port.
//		ports = ['8080']
//	}
//}
